убран эндпоинт создания аукциона и хендлер на него
